<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/space">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:background="@color/vr1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_icon_size">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="@dimen/default_icon_size"
                android:layout_height="@dimen/default_icon_size"
                android:src="@drawable/ic_btn_list_down"
                android:tint="@color/white"
                android:rotation="90"
                android:scaleY="0.7"
                android:scaleX="0.7"/>
            <TextView
                android:id="@+id/toolbarTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/string_identity_title"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textSize="@dimen/default_font_size_20"
                android:layout_marginEnd="@dimen/default_title_margin"
                android:textColor="@android:color/white"/>
        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appBarLayout"
        android:id="@+id/sv_root">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:text="@string/string_main_description8"
                android:textColor="@color/black"
                android:textFontWeight="900"
                android:textSize="@dimen/default_font_size_22" />

            <LinearLayout
                android:id="@+id/layout1"
                android:layout_below="@id/textView1"
                android:layout_marginTop="35dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="@dimen/input_drug_identity_text_width"
                    android:layout_height="wrap_content"
                    android:text="@string/string_identity_description1"
                    android:textSize="@dimen/default_font_size_20" />

                <EditText
                    android:id="@+id/identityF"
                    android:layout_width="@dimen/input_drug_identity_text_input_width"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:hint="@string/string_identity_description5"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout2"
                android:layout_below="@id/layout1"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="@dimen/input_drug_identity_text_width"
                    android:layout_height="wrap_content"
                    android:text="@string/string_identity_description2"
                    android:textSize="@dimen/default_font_size_20" />

                <EditText
                    android:id="@+id/identityB"
                    android:layout_width="@dimen/input_drug_identity_text_input_width"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:hint="@string/string_identity_description5"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout3"
                android:layout_below="@id/layout2"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="221dp"
                    android:layout_height="wrap_content"/>

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/string_identity_description3"
                    android:textColor="@color/black"/>

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/string_identity_description4"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/layout4"
                android:layout_below="@id/layout3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="30dp"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/btnSkip"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="@color/vr1"
                    android:text="@string/string_identity_description6"
                    android:textSize="@dimen/default_font_size_16" />
                <RelativeLayout
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/btnFinish"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="@color/vr1"
                    android:text="@string/string_identity_description7"
                    android:textSize="@dimen/default_font_size_16" />

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>