<?xml version="1.0" encoding="utf-8"?><!--
 Copyright 2014 The Android Open Source Project

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.crontiers.pillife.Camera.AutoFitTextureView2
        android:id="@+id/texture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/control"/>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="@dimen/default_icon_size"
        android:layout_height="@dimen/default_icon_size"
        android:layout_alignParentRight="true"
        android:src="@drawable/baseline_close_white_18"
        android:tint="@color/vr2"
        android:scaleX="0.6"
        android:scaleY="0.6"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/control"
        android:orientation="vertical"
        android:weightSum="4">

        <FrameLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/viewfinder_mask">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/layout_margin"
                android:gravity="center|bottom"
                android:text="@string/string_filter_description1"
                android:textColor="@color/white"
                android:textSize="@dimen/default_font_size_16"/>

        </FrameLayout>

        <LinearLayout
            android:layout_weight="1.4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:weightSum="3"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_weight="0.7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/viewfinder_mask">

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:rotation="180"
                    android:scaleX="2.5"
                    android:scaleY="2.5"
                    android:background="@drawable/ic_play_arrow_black_24dp"/>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/frameLayout_capture"
                android:tag="0"
                android:layout_weight="1.6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/shape_type_circle"/>

            <FrameLayout
                android:layout_weight="0.7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/viewfinder_mask">

                <ImageButton
                    android:id="@+id/imageButton4"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleX="2.5"
                    android:scaleY="2.5"
                    android:background="@drawable/ic_play_arrow_black_24dp"/>

            </FrameLayout>

        </LinearLayout>

        <FrameLayout
            android:layout_weight="1.6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/viewfinder_mask">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/layout_margin_2x"
                android:gravity="center|top"
                android:text="@string/string_filter_description2"
                android:textColor="@color/white"
                android:textSize="@dimen/default_font_size_16"/>

        </FrameLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/control"
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/intro_transparent">

        <RelativeLayout
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <ImageButton
                android:id="@+id/imageButton1"
                style="@android:style/Widget.Material.Light.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:contentDescription="@string/description_info1"
                android:scaleX="1.2"
                android:scaleY="1.2"
                android:src="@drawable/ic_flash_on_black_24dp"
                android:tag="0"
                android:visibility="invisible" />

            <Button
                android:id="@+id/picture"
                android:layout_centerInParent="true"
                android:background="@drawable/ic_shutter"
                android:layout_width="@dimen/default_icon_size5"
                android:layout_height="@dimen/default_icon_size5"
                android:layout_gravity="center" />

            <ImageButton
                android:id="@+id/imageButton2"
                style="@android:style/Widget.Material.Light.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/description_info2"
                android:scaleX="1.4"
                android:scaleY="1.4"
                android:src="@drawable/ic_help_outline_black_24dp"
                android:visibility="invisible" />

        </RelativeLayout>


    </FrameLayout>

</RelativeLayout>
